--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.sql.init.mode=always
 logging.file.path=D:\log\\mylog.log
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=santoshgedela345@gmail.com
+spring.mail.password=optrbhvmaptdjrlj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
