--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>IT-Management</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>IT-Management</name>
+	<packaging>war</packaging>  
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -75,6 +76,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>IT-SERVICES</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
